prevent task shifting (whole ass refactor)

--- a/src/ui/preflight.css
+++ b/src/ui/preflight.css
@@ -8,7 +8,6 @@
 
 ::-webkit-scrollbar-thumb {
 	background-color: var(--color-primary-700);
-	border-radius: 9999px;
 	transition-property: background-color;
 	transition-duration: var(--default-transition-duration);
 }
